--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.9"
+bevy = { version = "0.9.0", features = ["dynamic"] }
+bevy-inspector-egui = "0.15.0"
 
 [workspace]
 resolver = "2" # Important! wgpu/Bevy needs this!
