--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.9.0", features = ["dynamic"] }
-bevy-inspector-egui = "0.15.0"
+bevy = { version = "0.9", features = ["dynamic"] }
+bevy-inspector-egui = "0.17"
+log = "0.4"
 
 [workspace]
 resolver = "2" # Important! wgpu/Bevy needs this!
