--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.9", features = ["dynamic"] }
+bevy = "0.10"
 bevy-inspector-egui = "0.17"
 log = "0.4"
 
